--- a/sr/_config.yml
+++ b/sr/_config.yml
@@ -18,16 +18,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
+title: Seulrene
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+  I just need to catalogue seulrene moments for a fic don't mind me (but also if you would like to bask on them please be my guest)
+baseurl: "/sr" # the subpath of your site, e.g. /blog
+url: "https://joseulrene.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: joseulrene
+github_username:  joseulrene
 
 # Build settings
 theme: minima
