--- a/_data/moments.yml
+++ b/_data/moments.yml
@@ -2,10 +2,22 @@
   type: vlive
   date: 160315
   text: wendy thought seulrene were about to kiss in the ootn teaser
-  t: [7,36,8,2]
+  t: 
+    start:
+      min: 7
+      sec: 36
+    end:
+      min: 8
+      sec: 2
 - id: 14431
   type: vlive
   date: 161001
   text: about close friends (wendy are you watching?)
   bonus: they are so awkward singing together it's killing me and when irene just goes 'what??' omfg
-  t: [16,18,23,54]
+  t: 
+    start:
+      min: 16
+      sec: 18
+    end:
+      min: 23
+      sec: 54
