--- a/_data/moments.yml
+++ b/_data/moments.yml
@@ -1,36 +1,30 @@
 - id: 6436
-  sort: 160315-456
+  start: 456
   url: https://vlive.tv/embed/6436?&begin=456&end=482
   date: 160315
   text: wendy thought seulrene were about to kiss in the ootn teaser
   bonus: 
 - id: 14431
-  sort: 161001-978
+  start: 978
   url: https://vlive.tv/embed/14431?&begin=978&end=1434
   date: 161001
   text: about close friends (wendy are you watching?)
   bonus: they are so awkward singing together it's killing me and when irene just goes 'what??' omfg
 - id: 14431
-  sort: 161001-full
-  url: https://vlive.tv/embed/14431?&begin=0&end=0
+  start: 2959
+  url: https://vlive.tv/embed/14431?&begin=0&end=2959
   date: 161001
   text: this whole thing honestly
   bonus: 
 - id: 14431
-  sort: 161001-1517
+  start: 1517
   url: https://vlive.tv/embed/14431?&begin=1517&end=1617
   date: 161001
   text: trainee stories part 1
   bonus: 
 - id: 14431
-  sort: 161001-1688
+  start: 1688
   url: https://vlive.tv/embed/14431?&begin=1688&end=0
   date: 161001
-  text: 
-  bonus: 
-- id: 
-  sort: null-full
-  url: https://vlive.tv/embed/?&begin=0&end=0
-  date: null
-  text: 
+  text: ???
   bonus: 
